@@ -915,7 +915,8 @@ DUMP X;
    
    <section id="plucktuple">
      <title>PluckTuple</title>
-     <p>Allows the user to specify a string prefix, and then filter for the columns in a relation that begin with that prefix or match that regex pattern.</p>
+     <p>Allows the user to specify a string prefix, and then filter for the columns in a relation that begin with that prefix or match that regex pattern. Optionally, include flag 'false' to filter
+      for columns that do not match that prefix or match that regex pattern</p>
      
      <section>
        <title>Syntax</title>
@@ -923,6 +924,7 @@ DUMP X;
          <tr>
            <td>
              <p>DEFINE pluck PluckTuple(expression1)</p>
+             <p>DEFINE pluck PluckTuple(expression1,expression3)</p>
              <p>pluck(expression2)</p>
            </td>
          </tr>
@@ -948,6 +950,14 @@ DUMP X;
              <p>The fields to apply the pluck to, usually '*'</p>
            </td>
 	 </tr>
+    <tr>
+           <td>
+             <p>expression3</p>
+           </td>
+           <td>
+             <p>A boolean flag to indicate whether to include or exclude matching columns</p>
+           </td>
+   </tr>
        </table>
      </section>
      
@@ -964,6 +974,10 @@ describe c;
 c: {a::x: bytearray,a::y: bytearray,b::x: bytearray,b::y: bytearray}
 describe d;
 d: {plucked::a::x: bytearray,plucked::a::y: bytearray}
+DEFINE pluckNegative PluckTuple('a::','false');
+d = foreach c generate FLATTEN(pluckNegative(*));
+describe d;
+d: {plucked::b::x: bytearray,plucked::b::y: bytearray}
 </source>
      </section>
    </section>
